--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 
 <body>
     <header>
-        <ul>
-            <li><a href="#gmail">Gmail</a></li>
-            <li><a href="#images">images</a></li>
-            <li><a href="#ap"><i class="material-icons">apps</i></a></li>
-            <li><a href="#profile"><button>Sign In</button></li></a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="#gmail">Gmail</a></li>
+                <li><a href="#images">images</a></li>
+                <li><a href="#ap"><i class="material-icons">apps</i></a></li>
+                <li><a href="#profile"><button>Sign In</button></li></a></li>
+            </ul>
+            <nav>
     </header>
     <main>
         <div id="div-middle">
@@ -30,7 +32,8 @@
                     alt="google image" id="google-thumbnail">
             </div>
             <div>
-                <input id="search-bar" type="text">
+
+                <input id="search-bar" name="text" type="text">
             </div>
             <div id="query">
                 <button id="google-search-btn" href="#" type="submit">Google&nbsp;search</button>
@@ -38,10 +41,10 @@
             </div>
             <div id="lang">
                 <p>Google offered in:
-                    <a href="" target="_blank" class="language">मराठी </a>
-                    <a href="" target="_blank" class="language">বাংলা</a>
-                    <a href="" target="_blank" class="language">తెలుగు</a>
-                    <a href="" target="_blank" class="language">हिन्दी</a>
+                    <a href="#az" class="language">मराठी </a>
+                    <a href="#bz" class="language">বাংলা</a>
+                    <a href="#cz" class="language">తెలుగు</a>
+                    <a href="#dz" class="language">हिन्दी</a>
 
                 </p>
             </div>
@@ -49,20 +52,22 @@
     </main>
 
     <footer>
-        <ol>
-            <div id="fottie">
-                <div id="abh">
-                    <li><a href="#advert" class="lf">Advertising</a></li>
-                    <li><a href="#business" class="lf">Business</a></li>
-                    <li><a href="#tutorial" class="lf">How Search works</a></li>
+        <nav>
+            <ol>
+                <div id="fottie">
+                    <div id="abh">
+                        <li><a href="#advert" class="lf">Advertising</a></li>
+                        <li><a href="#business" class="lf">Business</a></li>
+                        <li><a href="#tutorial" class="lf">How Search works</a></li>
+                    </div>
+                    <div id="stp">
+                        <li><a href="#privacy" class="rf">Privacy</a></li>
+                        <li><a href="#terms" class="rf">Terms</a></li>
+                        <li><a href="#settings" class="rf">Settings</a></li>
+                    </div>
                 </div>
-                <div id="stp">
-                    <li><a href="#privacy" class="rf">Privacy</a></li>
-                    <li><a href="#terms" class="rf">Terms</a></li>
-                    <li><a href="#settings" class="rf">Settings</a></li>
-                </div>
-            </div>
-        </ol>
+            </ol>
+            <nav>
     </footer>
 </body>
 
