fix(Global): Modified HTML to include lang option and fixed some inconsistencies

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" >
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport"
-        content="width=device-width, initial-scale=0.86, user-scalable=1.0, maximum-scale=1.0, minimum-scale=0.86">
+        content="width=device-width, initial-scale=1">
 
     <title>Google Search</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link crossorigin="anonymous" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link crossorigin="anonymous"  href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
 
@@ -54,18 +54,18 @@
     <footer>
         <nav>
             <ol>
-                <div id="fottie">
-                    <div id="abh">
+                <li id="fottie">
+                    <ol id="abh">
                         <li><a href="#advert" class="lf">Advertising</a></li>
                         <li><a href="#business" class="lf">Business</a></li>
                         <li><a href="#tutorial" class="lf">How Search works</a></li>
-                    </div>
-                    <div id="stp">
+                    </ol>
+                    <ol id="stp">
                         <li><a href="#privacy" class="rf">Privacy</a></li>
                         <li><a href="#terms" class="rf">Terms</a></li>
                         <li><a href="#settings" class="rf">Settings</a></li>
-                    </div>
-                </div>
+                    </ol>
+                </li>
             </ol>
             <nav>
     </footer>
